--- a/scss/main.css
+++ b/scss/main.css
@@ -706,7 +706,7 @@ a {
 
 .grid-item .image-container {
   width: 100%;
-  height: 200px; /* Set a fixed height for the image container */
+  height: 350px; /* Set a fixed height for the image container */
   overflow: hidden;
 }
 
@@ -743,4 +743,28 @@ a {
   color: #fff;
   border: none;
   cursor: pointer;
+}
+
+.tools-container {
+  margin-top: 10px;
+}
+
+.tools-container .tools-label {
+  font-weight: bold;
+}
+
+.tools-container .tools-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.tools-container .tools-list li {
+  margin: 2px 5px;
+  padding: 2px 5px;
+  background-color: #f0f0f0;
+  border-radius: 3px;
 }/*# sourceMappingURL=main.css.map */
