--- a/scss/main.css
+++ b/scss/main.css
@@ -665,6 +665,17 @@ a {
   opacity: 50%;
 }
 
+@media only screen and (min-width: 280px) {
+  .work1 {
+    font-size: 12px;
+  }
+}
+@media only screen and (min-width: 425px) {
+  .work1 {
+    font-size: 16px;
+  }
+}
+
 .font-container {
   height: 30px;
   width: 30px;
@@ -693,8 +704,26 @@ a {
 
 #grid-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
+}
+@media only screen and (min-width: 280px) {
+  #grid-container {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 20px;
+    margin-bottom: 10px;
+  }
+}
+@media only screen and (min-width: 425px) {
+  #grid-container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    margin-bottom: 10px;
+  }
+}
+@media only screen and (min-width: 1080px) {
+  #grid-container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+  }
 }
 
 .grid-item {
@@ -705,20 +734,42 @@ a {
 }
 
 .grid-item .image-container {
-  width: 100%;
-  height: 350px; /* Set a fixed height for the image container */
   overflow: hidden;
+}
+@media only screen and (min-width: 280px) {
+  .grid-item .image-container {
+    width: 50%;
+    height: 100px;
+  }
+}
+@media only screen and (min-width: 1080px) {
+  .grid-item .image-container {
+    width: 100%;
+    height: 350px; /* Set a fixed height for the image container */
+  }
 }
 
 .grid-item img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover; /* Maintain aspect ratio and fill the container */
+  -o-object-fit: contain;
+     object-fit: contain; /* Maintain aspect ratio and fill the container */
+}
+@media only screen and (min-width: 280px) {
+  .grid-item img {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media only screen and (min-width: 1080px) {
+  .grid-item img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
-.project-info {
-  margin-top: 10px;
+@media only screen and (min-width: 1080px) {
+  .project-info {
+    margin-top: 10px;
+  }
 }
 
 .project-title {
@@ -747,6 +798,11 @@ a {
 
 .tools-container {
   margin-top: 10px;
+}
+@media only screen and (min-width: 280px) {
+  .tools-container {
+    margin-bottom: 15px;
+  }
 }
 
 .tools-container .tools-label {
